Paginas de recuperacao de senha

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,8 @@ a:hover {
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
     box-shadow: none;
 }
+
+.texto-destaque-simples {
+    color: #FFFFFF;
+    font-weight: lighter;
+}
